<resources>
    <string name="app_name">CSC</string>
    <string name="err_code_1001">Đã xảy ra lỗi, vui lòng thử lại!</string>
    <string name="err_code_1002">Email chưa được đăng ký, vui lòng thử lại!</string>
    <string name="err_code_1003">Email đã được đăng ký!</string>
    <string name="err_code_1004">Mật khẩu chưa chính xác!</string>
    <string name="err_code_1005">Tài khoản đã bị khóa, vui lòng liên hệ admin để mở khóa!</string>
    <string name="err_code_1006">Mật khẩu cũ chưa chính xác!</string>
    <string name="err_code_1007">Mã xác nhận chưa chính xác!</string>
    <string name="err_code_1008">Mã xác nhận đã hết hạn!</string>
    <string name="err_code_1009">Mã này đã được sử dụng!</string>
    <string name="err_code_1010">Mã xác nhận được gửi trước đó vẫn còn khả dụng!</string>
    <string name="err_code_1011">Đã tồn tại!</string>
    <string name="err_code_1012">Không có dữ liệu!</string>
    <string name="err_code_1013">Vui lòng nhập đủ dữ liệu!</string>
    <string name="err_code_1014">Đơn hàng đã nhận không thể hủy!</string>
    <string name="err_code_1015">Số điện thoại đã được đăng ký!</string>
    <string name="err_code_1016">Thanh toán momo thất bại!</string>
    <string name="err_code_1017">Số tiền trong ví không đủ, vui lòng nạp thêm!</string>
    <string name="err_code_1018">Đã xảy ra lỗi khi hoàn tiền, vui lòng thử lại sau!</string>
    <string name="err_code_1019">Không tìm thấy giao dịch, vui lòng thử lại sau!</string>
    <string name="reset_text_description_code">Mail reset mật khẩu đã được gửi, vui lòng kiểm tra mail và nhập mã xác nhận.</string>
    <string name="dialog_verification_description">Mail đăng ký tài khoản đã được gửi, vui lòng kiểm tra mail và nhập mã xác nhận.</string>
    <string name="register_confirm_password_invalid">*Xác nhận mật khẩu chưa chính xác</string>
    <string name="reset_text_send_email">Gửi mail xác thực</string>
    <string name="title_search_view">Bạn muốn tìm sản phẩm ?</string>
    <string name="item_product_name">Tên sản phẩm</string>
    <string name="branch_name_default">Tên chi nhánh</string>
    <string name="text_change">Thay đổi</string>
    <string name="text_payment">Cách thanh toán</string>
    <string name="text_order_location">Địa chỉ nhận hàng</string>
    <string name="text_order_detail">Chi tiết đơn hàng</string>
    <string name="text_order_location_branch">Nơi mua hàng</string>
    <string name="branch_change">Đổi chi nhánh</string>
    <string name="branch_address_default">45/14/2 Đường 3, phường Long Trường, TP Thủ Đức</string>
    <string name="add_to_cart">Thêm vào giỏ</string>
    <string name="buy_product">Chọn mua</string>
    <string name="add_to_cart_price">Thêm %s</string>
    <string name="product_info">Thông tin sản phẩm</string>
    <string name="product_category_default">Thể loại: Máy tính</string>
    <string name="product_description_default">Mô tả sản phẩm</string>
    <string name="product_same_category">Sản phẩm cùng loại</string>
    <string name="see_more">Xem tất cả</string>
    <string name="update_info_update_profile_success">Cập nhật thành công</string>
    <string name="manager_profile_text_title">Quản lý hồ sơ</string>
    <string name="your_cart">Giỏ hàng của bạn</string>
    <string name="review_your_order">Đơn hàng của bạn</string>
    <string name="destroy_order">Hủy đơn</string>
    <string name="item_product_price">1.000.000đ</string>
    <string name="text_order_total_price">Tổng tiền %s</string>
    <string name="btn_order">Đặt đơn</string>
    <string name="text_shipping_fee">Phí ship</string>
    <string name="text_total">Tổng (tạm tính)</string>
    <string name="text_total_expect">Tổng</string>
    <string name="profile_name_default">Đỗ Chiếm Dương</string>
    <string name="change_product">Thêm sản phẩm</string>
    <string name="payment_method_default">Trả bằng tiền mặt khi nhận hàng</string>
    <string name="promotion_code_default">HELLOWORLD</string>
    <string name="text_order_code_default">Mã đơn #ABC123</string>
    <string name="text_order_code">Mã đơn #%s</string>
    <string name="wallet_order_code">Mã đơn %s</string>
    <string name="wallet_amount_plus">+%s</string>
    <string name="wallet_amount_minus">-%s</string>
    <string name="text_title_order_detail">Chi tiết đơn hàng #%s</string>
    <string name="text_cart_product_quantity">x%d</string>
    <string name="add_promotion_code">Áp dụng \nmã giảm</string>
    <string name="send_request_order">Đang gửi yêu cầu đặt hàng…</string>
    <string name="text_status_default">Đang chờ</string>
    <string name="text_rll_loading">Loading …</string>
    <string name="item_product_quantity_2">x2</string>
    <string name="item_product_quantity">Còn hàng: 100</string>
    <string name="text_product_quantity">Còn hàng: %d</string>
    <string name="text_product_quantity_0">(Tạm hết hàng)</string>
    <string name="order_status_0">Chờ xử lý</string>
    <string name="order_status_1">Đã nhận đơn</string>
    <string name="order_status_2">Đang giao</string>
    <string name="order_status_3">Hoàn thành</string>
    <string name="order_status_4">Đã hủy</string>
    <string name="order_status_description_0">Cảm ơn bạn đã cho CSC cơ hội được phục vụ. Trong vòng 15 phút nhân viên sẽ gọi điện thoại để xác nhận đơn hàng.</string>
    <string name="order_status_description_1">Cảm ơn bạn đã cho CSC cơ hội được phục vụ. Đơn hàng đã được nhận và đang chuẩn bị, trong 15 phút sẽ bắt đầu giao đến cho bạn</string>
    <string name="order_status_description_2">Cảm ơn bạn đã cho CSC cơ hội được phục vụ. Đơn hàng đang được giao vui lòng đợi tài xế liên hệ khi đến nơi.</string>
    <string name="order_status_description_3">Cảm ơn bạn đã cho CSC cơ hội được phục vụ. CSC biết bạn có nhiều sự lựa chọn, cảm ơn vì đã chọn CSC hôm nay.</string>
    <string name="order_status_description_4">Đơn hàng của bạn đã được hủy, mong bạn tiếp tục ủng hộ CSC ở những lần sau. CSC chờ đợi cơ hội để phục vụ bạn.</string>
    <string name="text_order_history">Lịch sử đơn hàng</string>
    <string name="destroy_order_sure">Bạn có chắc chắn hủy đơn hàng này?</string>
    <string name="text_count_order">Bạn có %d đơn hàng chờ giao</string>
    <string name="text_see_more">Xem tất cả</string>
    <string name="text_see_order">Xem đơn hàng</string>
    <string name="title_activity_maps">Map</string>
    <string name="text_get_location">Cập nhật vị trí nhận hàng</string>
    <string name="default_info_title">Tiêu đề thông tin mặc định</string>
    <string name="default_info_snippet">Thông tin đoạn trích mặc định</string>
    <string name="pick_place">Chọn vị trí</string>
    <string name="update_location_success">Cập nhật vị trí đặt hàng thành công</string>
    <string name="GPS_not_found">Vui lòng bật GPS để cập nhật vị trí nhận hàng</string>
    <string name="login_email_title">Nhập email của bạn để tiếp tục</string>
    <string name="login_email_next">Tiếp</string>
    <string name="login_email_register_here">Đăng ký tại đây</string>
    <string name="login_email_or">Hoặc</string>
    <string name="login_email_facebook">Đăng nhập bằng facebook</string>
    <string name="login_email_rule"><![CDATA[Điều khoản & dịch vụ]]></string>
    <string name="login_password_title">Đăng nhập</string>
    <string name="login_password_text_password">Mật khẩu</string>
    <string name="login_password_text_login">Đăng nhập</string>
    <string name="login_password_text_reset">Reset mật khẩu tại đây</string>
    <string name="text_update_profile">Cập nhật hồ sơ</string>
    <string name="text_community">Cộng đồng</string>
    <string name="text_favorite_product">Sản phẩm ưa thích</string>
    <string name="text_question">Câu hỏi thường gặp</string>
    <string name="text_contact">Liên hệ với chúng tôi</string>
    <string name="text_version">Phiên bản hiện tại %s</string>
    <string name="text_logout">Đăng xuất</string>
    <string name="dialog_text_ok">OK</string>
    <string name="dialog_text_cancel">CANCEL</string>
    <string name="dialog_question_logout">"Bạn có muốn đăng xuất?"</string>
    <string name="register_text_title">Đăng ký</string>
    <string name="register_text_full_name">Họ và tên</string>
    <string name="register_text_phone_number">Số điện thoại</string>
    <string name="register_text_email">Email</string>
    <string name="register_text_password">Mật khẩu</string>
    <string name="register_text_confirm_password">Xác nhận mật khẩu</string>
    <string name="register_name_invalid"><![CDATA[*Họ và tên < 6 ký tự]]></string>
    <string name="register_phone_invalid">*Số điện thoại chưa đúng định dạng</string>
    <string name="register_email_length_invalid"><![CDATA[*Email < 6 ký tự]]></string>
    <string name="register_email_invalid">*Email chưa đúng định dạng</string>
    <string name="register_password_length_invalid"><![CDATA[*Password < 6 ký tự]]></string>
    <string name="register_success">Đăng ký thành công</string>
    <string name="reset_text_title">Reset mật khẩu</string>
    <string name="reset_text_new_password">Mật khẩu mới</string>
    <string name="reset_password_success">Reset mật khẩu thành công</string>
    <string name="manager_profile_text_info">Thông tin cá nhân</string>
    <string name="manager_profile_text_change_info">Thay đổi</string>
    <string name="manager_profile_text_change_password">Đổi mật khẩu</string>
    <string name="manager_profile_empty_info">Chưa đặt</string>
    <string name="manager_profile_text_pick">Chọn</string>
    <string name="update_info_text_name">Họ và tên</string>
    <string name="update_info_text_birthday">Ngày sinh</string>
    <string name="update_info_text_phone">Số điện thoại</string>
    <string name="update_info_text_save_change">Lưu thay đổi</string>
    <string name="manager_profile_update_avatar_success">Thay đổi avatar thành công</string>
    <string name="update_info_change_password_success">Đổi mật khẩu thành công</string>
    <string name="update_info_text_title">Thay đổi thông tin cá nhân</string>
    <string name="update_password_text_title">Thay đổi mật khẩu</string>
    <string name="update_password_text_save_change">Lưu thay đổi</string>
    <string name="update_password_text_old_password">Mật khẩu cũ</string>
    <string name="update_password_text_new_password">Mật khẩu mới</string>
    <string name="update_password_text_confirm">Xác nhận mật khẩu</string>
    <string name="item_text_see_more">Xem thêm</string>
    <string name="greet_morning">buổi sáng</string>
    <string name="greet_lunch">buổi trưa</string>
    <string name="greet_evening">buổi chiều</string>
    <string name="greet_night">buổi tối</string>
    <string name="greet_description">Chào %s, %s</string>
    <string name="category_text_title">Danh mục</string>
    <string name="main_delivery_to">Giao đến: </string>
    <string name="reset_pass_count_timer">Gửi mail xác thực (%s)</string>
    <string name="super_category_title">Tất cả sản phẩm</string>
    <string name="payment_title">Cách thanh toán</string>
    <string name="payment_title_pick">Chọn cách thanh toán</string>
    <string name="payment_method_cod">Trả bằng tiền mặt khi nhận hàng</string>
    <string name="payment_method_momo">Ví Momo</string>
    <string name="payment_method_wallet">Trả bằng tài khoản CSC</string>
    <string name="payment_btn_submit">Chọn cách thanh toán này</string>
    <string name="rating_title">Đánh giá đơn hàng %s</string>
    <string name="rating_hint">Đánh giá của bạn</string>
    <string name="rating_save">Lưu đánh giá</string>
    <string name="rating_good">Hài lòng</string>
    <string name="rating_bad">Không hài lòng</string>
    <string name="rating_header_description">Cảm ơn bạn đã sử dụng dịch vụ của CSC. Những đánh giá của bạn sẽ đóng góp 1 phần cho cộng đồng CSC và giúp chúng tôi góp phần cải thiện dịch vụ tốt hơn.</string>
    <string name="widget_rating_text_rating">Chia sẻ cảm nhận</string>
    <string name="widget_rating_show_rating">Xem đánh giá</string>
</resources>