<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.payment.PaymentActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_48"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dimen_16"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imv_back"
                android:layout_width="@dimen/dimen_24"
                android:layout_height="@dimen/dimen_24"
                android:layout_gravity="center"
                android:layout_weight="0"
                android:src="@drawable/ic_back" />

            <TextView
                android:id="@+id/tv_title"
                style="@style/bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dimen_24"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/payment_title"
                android:textColor="@color/black"
                android:textSize="@dimen/text_16" />
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_10"
        android:layout_below="@+id/toolbar"
        android:background="@color/gray_light" />

    <TextView
        android:id="@+id/tv_title_pick"
        style="@style/bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/view"
        android:paddingHorizontal="@dimen/dimen_15"
        android:paddingVertical="@dimen/dimen_10"
        android:text="@string/payment_title_pick"
        android:textColor="@color/black"
        android:textSize="@dimen/text_16" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_title_pick"
        android:paddingHorizontal="@dimen/dimen_15">

        <RadioButton
            android:id="@+id/radio_cod"
            style="@style/regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/checkbox_layout"
            android:paddingHorizontal="@dimen/dimen_10"
            android:text="@string/payment_method_cod"
            android:textColor="@color/black"
            android:textSize="@dimen/text_14" />

        <RadioButton
            android:id="@+id/radio_momo"
            style="@style/regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/checkbox_layout"
            android:paddingHorizontal="@dimen/dimen_10"
            android:text="@string/payment_method_momo"
            android:textColor="@color/black"
            android:textSize="@dimen/text_14" />

        <RadioButton
            android:id="@+id/radio_wallet"
            style="@style/regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/checkbox_layout"
            android:paddingHorizontal="@dimen/dimen_10"
            android:text="@string/payment_method_wallet"
            android:textColor="@color/black"
            android:textSize="@dimen/text_14" />
    </RadioGroup>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1"
        android:background="@color/gray_dark"
        android:layout_above="@id/tv_submit"/>
    <TextView
        android:id="@+id/tv_submit"
        style="@style/bold"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_48"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/dimen_15"
        android:background="@drawable/bg_btn"
        android:gravity="center"
        android:paddingHorizontal="@dimen/dimen_15"
        android:paddingVertical="@dimen/dimen_10"
        android:text="@string/payment_btn_submit"
        android:textColor="@color/white"
        android:textSize="@dimen/text_16" />
</RelativeLayout>