<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        app:cardElevation="5dp">
        <LinearLayout
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="5dp">
            <ImageView
                android:id="@+id/imv_avatar"
                android:layout_width="140dp"
                android:layout_height="120dp"
                android:scaleType="fitXY"
                android:src="@drawable/subject_default"/>
            <TextView
                android:id="@+id/tv_product_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/item_product_name"
                android:textSize="14dp"
                android:textColor="@color/black"
                android:layout_margin="5dp"
                android:textStyle="bold"
                android:maxLines="2"
                android:lines="2"
                android:ellipsize="end"/>
            <TextView
                android:id="@+id/tv_product_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/item_product_price"
                android:paddingStart="5dp"
                android:textSize="12dp"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/tv_product_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:textSize="12dp"
                android:textColor="@color/black"
                android:text="@string/item_product_quantity"
                android:gravity="start|center"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>
