<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp">

        <ImageView
            android:id="@+id/imv_branch_avatar"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:scaleType="fitXY"
            android:src="@drawable/subject_default" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_order_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/text_order_code_default"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/tv_branch_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:maxLines="1"
            android:ellipsize="end"
            android:text="@string/branch_name_default"
            android:textColor="@color/black"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/tv_order_total_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:text="@string/product_price_default"
            android:textColor="@color/black"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/tv_order_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|center"
            android:paddingStart="5dp"
            android:text="@string/text_status_default"
            android:textColor="@color/black"
            android:textSize="14dp" />
    </LinearLayout>
</LinearLayout>
